<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/fragment_popup_bg"
    tools:context=".ui.home.DialogFragment">

    <TextView
        android:id="@+id/tvDialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/analyze_stunting"
        android:textColor="@color/light_blue"
        android:textSize="20sp"
        style="@style/TextBold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvGender"
        style="@style/TextRegular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/gender"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/spinnerGender"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/spinnerGender" />


    <Spinner
        android:id="@+id/spinnerGender"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:entries="@array/gender_options"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvGender"
        app:layout_constraintTop_toBottomOf="@+id/tvDialogTitle" />

    <TextView
        android:id="@+id/tvUmur"
        style="@style/TextRegular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/umur"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/etUmur"
        app:layout_constraintStart_toStartOf="@+id/tvGender"
        app:layout_constraintTop_toTopOf="@+id/etUmur" />

    <EditText
        android:id="@+id/etUmur"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/umur_hint"
        android:imeOptions="actionNext"
        android:inputType="number"

        app:layout_constraintEnd_toEndOf="@+id/spinnerGender"
        app:layout_constraintStart_toStartOf="@+id/spinnerGender"
        app:layout_constraintTop_toBottomOf="@+id/spinnerGender" />

    <TextView
        android:id="@+id/tvBeratBadan"
        style="@style/TextRegular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/berat_badan"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/etBeratBadan"
        app:layout_constraintStart_toStartOf="@+id/tvUmur"
        app:layout_constraintTop_toTopOf="@+id/etBeratBadan" />

    <EditText
        android:id="@+id/etBeratBadan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/berat_badan_hint"
        android:imeOptions="actionNext"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvBeratBadan"
        app:layout_constraintTop_toBottomOf="@+id/etUmur" />

    <TextView
        android:id="@+id/tvBeratBadanLahir"
        style="@style/TextRegular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/berat_badan_lahir"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/etBeratBadanLahir"
        app:layout_constraintStart_toStartOf="@+id/tvBeratBadan"
        app:layout_constraintTop_toTopOf="@+id/etBeratBadanLahir" />

    <EditText
        android:id="@+id/etBeratBadanLahir"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/berat_badan_lahir_hint"
        android:imeOptions="actionNext"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvBeratBadanLahir"
        app:layout_constraintTop_toBottomOf="@+id/etBeratBadan" />

    <TextView
        android:id="@+id/tvPanjangBadanLahir"
        style="@style/TextRegular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/panjang_badan_lahir"
        android:textColor="@color/black"

        app:layout_constraintBottom_toBottomOf="@+id/etPanjangBadanLahir"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etPanjangBadanLahir" />

    <EditText
        android:id="@+id/etPanjangBadanLahir"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/panjang_badan_lahir_hint"
        android:imeOptions="actionNext"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvPanjangBadanLahir"
        app:layout_constraintTop_toBottomOf="@+id/etBeratBadanLahir" />

    <TextView
        android:id="@+id/tvBeratBadanSaatIni"
        style="@style/TextRegular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/berat_badan_saat_ini"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/etBeratBadanSaatIni"
        app:layout_constraintStart_toStartOf="@+id/tvPanjangBadanLahir"
        app:layout_constraintTop_toTopOf="@+id/etBeratBadanSaatIni" />

    <EditText
        android:id="@+id/etBeratBadanSaatIni"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/berat_badan_saat_ini_hint"
        android:imeOptions="actionNext"
        android:inputType="numberDecimal"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvBeratBadanSaatIni"
        app:layout_constraintTop_toBottomOf="@+id/etPanjangBadanLahir" />

    <TextView
        android:id="@+id/tvTinggiBadanSaatIni"
        style="@style/TextRegular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tinggi_badan_saat_ini"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvBeratBadanSaatIni"
        app:layout_constraintTop_toTopOf="@+id/etTinggiBadanSaatIni" />

    <EditText
        android:id="@+id/etTinggiBadanSaatIni"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/tinggi_badan_saat_ini_hint"
        android:imeOptions="actionDone"
        android:inputType="numberDecimal"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvTinggiBadanSaatIni"
        app:layout_constraintTop_toBottomOf="@+id/etBeratBadanSaatIni" />



</androidx.constraintlayout.widget.ConstraintLayout>