<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/activity_horizontal_margin"
    android:paddingVertical="30dp"
    tools:context=".ui.auth.register.RegisterActivity">

    <ImageView
        android:id="@+id/iv_register_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_icon_content_description"
        android:src="@drawable/ic_arrow"
        app:layout_constraintBottom_toBottomOf="@+id/tv_register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_register"
        app:tint="@color/black" />

    <TextView
        android:id="@+id/tv_register"
        style="@style/TextBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/create_account"
        android:textColor="@color/black"
        android:textSize="28sp"
        app:layout_constraintStart_toEndOf="@+id/iv_register_back"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/tv_register"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            style="@style/TextRegular"
            android:text="@string/nickname"
            android:textColor="@color/black"
            android:textSize="16sp"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/nicknameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/edit_text_background"
            android:drawablePadding="16dp"
            android:fontFamily="@font/inter_medium"
            android:hint="@string/hint_input_nickname"
            android:padding="16dp"
            android:textColor="@color/gray"
            android:textColorHint="@color/gray"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            style="@style/TextRegular"
            android:text="@string/full_name"
            android:textColor="@color/black"
            android:textSize="16sp"/>


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/full_nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/edit_text_background"
            android:drawablePadding="16dp"
            android:fontFamily="@font/inter_medium"
            android:hint="@string/hint_input_full_name"
            android:padding="16dp"
            android:textColor="@color/gray"
            android:textColorHint="@color/gray"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            style="@style/TextRegular"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="16sp"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/edit_text_background"
            android:drawablePadding="16dp"
            android:fontFamily="@font/inter_medium"
            android:hint="@string/hint_input_email"
            android:padding="16dp"
            android:textColor="@color/gray"
            android:textColorHint="@color/gray"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            style="@style/TextRegular"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="16sp"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/edit_text_background"
            android:drawableEnd="@drawable/ic_visibility"
            android:drawablePadding="16dp"
            android:fontFamily="@font/inter_medium"
            android:hint="@string/hint_input_password"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textColor="@color/gray"
            android:textColorHint="@color/gray"
            android:textSize="16sp" />

        <TextView
            style="@style/TextMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/confirm_password"
            android:textColor="@color/black"
            android:textSize="16sp" />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/confirmPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/edit_text_background"
            android:drawableEnd="@drawable/ic_visibility"
            android:drawablePadding="16dp"
            android:fontFamily="@font/inter_medium"
            android:hint="@string/hint_input_confirm_password"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textColor="@color/gray"
            android:textColorHint="@color/gray"
            android:textSize="16sp" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/register_button"
        style="@style/Button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/button_background"
        android:padding="16dp"
        android:text="@string/furthermore"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>