<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_gradient_color"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context=".ui.auth.login.LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/inter_bold"
        android:gravity="center"
        android:paddingBottom="24dp"
        android:text="@string/login_title"
        android:textColor="@android:color/white"
        android:textSize="24sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/edit_text_layout_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/edit_text_background"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="16dp"
                android:fontFamily="@font/inter_medium"
                android:hint="@string/hint_email"
                android:padding="16dp"
                android:textColor="@color/gray"
                android:textColorHint="@color/gray"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/edit_text_background"
                android:drawableStart="@drawable/ic_lock"
                android:drawableEnd="@drawable/ic_visibility"
                android:drawablePadding="16dp"
                android:fontFamily="@font/inter_medium"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:padding="16dp"
                android:textColor="@color/gray"
                android:textColorHint="@color/gray"
                android:textSize="16sp" />
        </LinearLayout>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/tv_or"
        android:textColor="@android:color/black" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/google_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/google_button_background"
        android:drawableStart="@drawable/ic_google"
        android:drawablePadding="50dp"
        android:fontFamily="@font/inter_semibold"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:text="@string/login_with_google"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/button_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        android:visibility="gone">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/forgotPasswordButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/google_button_background"
            android:fontFamily="@font/inter_semibold"
            android:padding="16dp"
            android:text="Lupa password"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_background_2"
            android:fontFamily="@font/inter_semibold"
            android:padding="16dp"
            android:text="Masuk"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/tv_have_account"
        android:textColor="@android:color/black" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:fontFamily="@font/inter_semibold"
        android:padding="16dp"
        android:text="@string/btn_register"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

</LinearLayout>